Menambahkan halaman utama dan halaman daftar tugas

--- a/front-end/task-list.html
+++ b/front-end/task-list.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Halaman Utama</title>
+    <title>Daftar Tugas</title>
 </head>
 <body>
     <header>
-        <h1>Selamat Datang di Aplikasi Tugas</h1>
-        <nav>
-            <a href="create-task.html">Buat Tugas</a>
-            <a href="task-list.html">Daftar Tugas</a>
-        </nav>
+        <h1>Daftar Tugas Anda</h1>
     </header>
     <main>
-        <h2>Mulai Mengelola Tugas Anda!</h2>
+        <ul id="task-list">
+            <!-- Daftar tugas akan ditambahkan di sini -->
+        </ul>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
